--- a/script.html
+++ b/script.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <title>8.01.20 ferst js.</title>
-
+<meta charset="UTF-8">
 <body>
     <script src="8.01.20.js"></script>
 </body>
